--- a/home.html
+++ b/home.html
@@ -369,14 +369,14 @@ h1,h2 {
 }
 
 .backbar {
-    height: 300mm;
-    width: 400mm;
+    height: 100%;
+    width: 100%;
     /*width: 270mm;*/
     background: white;
     /*background: #f7edd9;*/
     position: relative;
-    right: 4mm;
-    bottom: 4mm;
+    display: flex;
+    flex-flow: row wrap;
 }
 </style>
 </head>
