--- a/home.html
+++ b/home.html
@@ -2493,7 +2493,7 @@ function gloatingList(enemy) {
         [`Did you believe I would let you on my trail by mistake?`,`Now face your death!`],
         [`Death smiles at us all,`,`All you can do is to smile back.`],
         [`It's been a funny sort of day,`,`Isn't it?`],
-        [`${defineAddressing(enemy)},`,`I thought you were made of sterner stuff.`],
+        [`${upperCaseInitial(defineAddressing(enemy))},`,`I thought you were made of sterner stuff.`],
         [`Why, ${defineAddressing(enemy)}? Why do you do it? Why keep fighting?`,`Do you believe you're fighting for something? Can you tell me what it is? Do you even know?`],
         [`You must be able to see it. You must know it by now,`,`You can't win. It's pointless to keep fighting. Why do you persist?`],
         [`I won't get away with this?`,`I already have!`],
