--- a/home.html
+++ b/home.html
@@ -2493,7 +2493,7 @@ let text
             case "Cartel": text = (stance == "Ally" ?
             `The streets have had enought of the constant threat the evil machinations of ${finalboss} and the ilk pose to the common people. 
             The Cartel has decided to aid you in taking ${genderPronoun(finalboss,"object")} out!` : 
-            `You have been a thorn in the side of the Golden Dragons for a long time. While you are busy with your mission to get ${finalboss}, they have sent a 
+            `You have been a thorn in the side of the Cartel for a long time. While you are busy with your mission to get ${finalboss}, they have sent a 
             ${group.length == 1 ? "single enforcer" : "group of enforcers"} to remove that thorn.`);
             break;
             case "Aztec": text = (stance == "Ally" ? 
