--- a/home.html
+++ b/home.html
@@ -154,31 +154,31 @@ function globalGladiators(enemies, stages) {
 
     let gladiators = [
         {name: "Ah Long", enemy: ["Ah Long",randFrom(filterArray(enemies,"name","Kingdom")).boss], ally: ["Wan Bo"], rival: ["Shadow", "Jackal", "Wan Bo"], stage: "Steel Memories",
-        get instructions() {return `If you choose to use ${this.name}, choose ${this.enemy[1]} as the boss in stage 2B of your personal story.`}},
+        get instructions() {return `If you choose to use ${this.name}, choose ${this.enemy[1]} as the boss in part 2B of your personal story.`}},
         {name: "Axel", enemy: "Mack", ally: ["Mary Ann"], rival: ["Mary Ann"], stage: "Under Destruction"},
         {name: "Brandon", enemy: "Ah Long", ally: ["Isabella"], rival: ["Isabella"], stage: ["Cashed Out", "Steel Memories"]},
         {name: "Clint", enemy: "", ally: [""], rival: [""], stage: ""},
         {name: "Dmitri", enemy: randFrom(enemies).boss, ally: [""], rival: ["Anastasia"], stage: "Right to Remain Silent",
-        get instructions() {return `If you choose to use ${this.name}, choose ${this.enemy} as the boss in stage 1 of your personal story.`}},
+        get instructions() {return `If you choose to use ${this.name}, choose ${this.enemy} as the boss in part 1 of your personal story.`}},
         {name: "Gabriel", enemy: "Jackal", ally: ["Drago"], rival: ["Drago"], stage: "Original Copy"},
         {name: "Ikuchi", enemy: "Jackal", ally: ["Megan"], rival: [""], stage: "Original Copy"},
         {name: "Jackal", enemy: "Shadow", ally: ["Project X"], rival: ["Kemono", "Project X"], stage: "Steel Memories"},
         {name: "Juan", enemy: randFrom(enemies).boss, ally: ["Tiger Azules"], rival: ["Tiger Azules"], stage: "Compromised",
-        get instructions() {return `If you choose to use ${this.name}, choose ${this.enemy} as the boss in stage 1 of your personal story.`}},
+        get instructions() {return `If you choose to use ${this.name}, choose ${this.enemy} as the boss in part 1 of your personal story.`}},
         {name: "Kemono", enemy: "", ally: ["Darius"], rival: ["Shadow", "Darius"], stage: "Sudden Death"},
         {name: "Kenshin", enemy: "Ah Long", ally: ["Brandon"], rival: ["Shadow","Jackal","Kemono"], stage: "Cashed Out"},
         {name: "Kyoryu", enemy: randFrom(enemies).boss, ally: ["Hanzo"], rival: ["Hanzo"], stage: "Sudden Death",
-        get instructions() {return `If you choose to use ${this.name}, choose ${this.enemy} as the boss in stage 2A of your personal story.`}},
+        get instructions() {return `If you choose to use ${this.name}, choose ${this.enemy} as the boss in part 2A of your personal story.`}},
         {name: "Mack", enemy: "Juan", ally: ["Leeta"], rival: ["Shadow"], stage: "Sudden Death"},
         {name: "Max", enemy: "", ally: [""], rival: [""], stage: ""},
         {name: "Megan", enemy: "Dmitri", ally: ["Sera O'Quinn"], rival: ["Sera O'Quinn"], stage: ["Gone Ballistic", "Compromised"]}, 
         {name: "Miss Matrix", enemy: "Ah Long", ally: ["Ying Hua"], rival: ["Ah Long","Kemono"], stage: "Cashed Out"},
         {name: "Natalia", enemy: "Dmitri", ally: ["Zane"], rival: ["Zane"], stage: ["Gone Ballistic", "Original Copy"]},
         {name: "Project X", enemy: randFrom(filterArray(enemies,"name","Kingdom")).boss, ally: ["Natalia"], rival: ["Natalia","Jackal"], stage: "Original Copy", 
-        get instructions() {return `If you choose to use ${this.name}, choose ${this.enemy} as the boss in stage 3 of your personal story.`}},
+        get instructions() {return `If you choose to use ${this.name}, choose ${this.enemy} as the boss in part 3 of your personal story.`}},
         {name: "Rhys", enemy: "Mack", ally: ["Leeta"], rival: ["Leeta"], stage: "Poison the Well"},
         {name: "Shadow", enemy: "Juan", ally: ["Shin Yokai"], rival: ["Ah Long", "Dmitri", "Shin Yokai", "Kemono"], stage: [randFrom(stages).name],
-        get instructions() {return `If you choose to use ${this.name}, choose ${this.stage} as the stage in stage 2A of your personal story.`}},
+        get instructions() {return `If you choose to use ${this.name}, choose ${this.stage} as the stage in part 2A of your personal story.`}},
         {name: "Selene", enemy: "Dmitri", ally: [""], rival: ["Genesis"], stage: "Estate of Decay"},
         {name: "The Don", enemy: "Juan", ally: ["Gabriel"], rival: ["Juan", "Gabriel"], stage: "Gone Ballistic"},
         {name: "The Proxy", enemy: "Juan", ally: ["Power Soldier"], rival: ["Power Soldier"], stage: "Compromised"},
