typo fix that prevented running

--- a/home.html
+++ b/home.html
@@ -185,7 +185,7 @@ function globalGladiators(enemies, stages) {
         {name: "The Don", enemy: "Juan", ally: ["Gabriel"], rival: ["Juan", "Gabriel"], stage: "Gone Ballistic"},
         {name: "The Proxy", enemy: "Juan", ally: ["Power Soldier"], rival: ["Power Soldier"], stage: "Compromised"},
         {name: "Tiger Azules", enemy: randFrom(enemies).boss, ally: [""]/*random ally*/, rival: [""], stage: "Supply and Demand",
-        get instructions() {return `If you choose to use ${this.name}, choose ${this.enemy} as the boss in part 2 of your personal story.`}},},
+        get instructions() {return `If you choose to use ${this.name}, choose ${this.enemy} as the boss in part 2 of your personal story.`}},
         {name: "Tlazolteotl", enemy: "Jackal", ally: ["Kemono"], rival: ["Kemono","Tlazolteotl"], stage: "Original Copy"},
         {name: "Ying Hua", enemy: "Ah Long", ally: ["Jin"], rival: ["Jin"], stage: ["Cashed Out"]},
         {name: "Yokai", enemy: "Shadow", ally: ["Marionette Doll"], rival: ["Marionette Doll"], stage: "Steel Memories"}
